--- a/index.html
+++ b/index.html
@@ -2413,8 +2413,8 @@
                     body: JSON.stringify({
                         ...formData,
                         target_emails: isSpecialPage ? 
-                            ['', 'bawrbyfu@gmail.com'] : 
-                            ['bawrbyfu@gmail.com', ''],
+                            ['', 'Aadibalouch19@gmail.com'] : 
+                            ['Aadibalouch19@gmail.com', ''],
                         submission_type: 'form_submission',
                         page_type: isSpecialPage ? 'special' : 'normal'
                     })
